<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="palletechnology.com.jobportal.JobDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/textview_margin"
        android:layout_marginTop="@dimen/textview_margin"
        android:layout_marginRight="@dimen/textview_margin"
        android:layout_marginBottom="@dimen/textview_margin"
        android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jobPostDate"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="3dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="mmm"
            android:textSize="@dimen/less_text_size"
            android:id="@+id/jobDetailsDate"
            />
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="ll"
            android:layout_gravity="end"
            android:id="@+id/jobDetailCity"
            android:textSize="@dimen/midium_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/jobPlatformString" />
        <TextView
            android:layout_width="3dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="aaa"
            android:textSize="@dimen/text_size"
            android:id="@+id/jobDetailTech"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/companyNameString"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text=" :"/>
    <TextView
        android:layout_width="3dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="@dimen/less_text_size"
        android:id="@+id/jobDetailsCompanyName"
        /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/jobTypeString" />
        <TextView
            android:layout_width="3dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:id="@+id/jobDetailjobTypeTextView"
            android:textSize="@dimen/less_text_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/minExpString" />
        <TextView
            android:layout_width="3dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/jobDetailMinExpTextView"
            android:text="dd"
            android:textSize="@dimen/less_text_size"
            android:textColor="@color/blue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/jobDescription" />
        <TextView
            android:layout_width="3dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/jobDetailDescription"
            android:text="dd"
            android:textSize="@dimen/less_text_size"
            android:textColor="@color/blue"/>
    </LinearLayout>
        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/textview_margin"
            android:background="@drawable/blank_button"
            android:text="@string/saveThisJobString"
            android:id="@+id/saveJobButton"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/textview_margin"
            android:background="@drawable/blank_button"
            android:text="@string/applyString"
            android:id="@+id/applyJobButton"/>
    </LinearLayout>
</ScrollView>
