<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="palletechnology.com.jobportal.EnterInMyAccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/jobportal_icon"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/skyBlue">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/textview_margin"
            android:text="@string/enterInYourAccount" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailString"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/textview_margin"
            android:textSize="@dimen/midium_text_size"
            android:layout_marginLeft="@dimen/textview_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginRight="@dimen/textview_margin"
            android:id="@+id/enterAccountEmailEditText"
            android:background="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordString"
            android:textSize="@dimen/midium_text_size"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginTop="@dimen/textview_margin"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPassword"
            android:id="@+id/enterAccountPassEditText"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginRight="@dimen/textview_margin"/>
        <Button
            android:layout_width="219dp"
            android:layout_height="54dp"
            android:background="@drawable/blank_button"
            android:layout_marginTop="@dimen/textview_margin"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/enterInAccountString"
            android:id="@+id/enterInAccountButton"/>

    </LinearLayout>

</LinearLayout>
