<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="palletechnology.com.jobportal.PostJobDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/jobportal_icon"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/skyBlue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/adminLogin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adminIdString"
            android:textColor="@color/white"
            android:textSize="@dimen/midium_text_size"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginRight="@dimen/textview_margin"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/adminIdEditText"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginRight="@dimen/textview_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adminpassString"
            android:textColor="@color/white"
            android:textSize="@dimen/midium_text_size"
            android:layout_marginTop="@dimen/textview_margin"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginRight="@dimen/textview_margin"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/adminPassEditText"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginRight="@dimen/textview_margin"/>
        <ImageButton
            android:layout_width="222dp"
            android:layout_height="135dp"
            android:background="@drawable/login2"
            android:id="@+id/adminLoginImgButton"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
